// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSwitcher /> Applications without a name should not be renderered should render correctly 1`] = `
<div>
  <div
    class="HvAppSwitcher-root HvAppSwitcher-single HvAppSwitcher-open"
  >
    <span
      class="HvAppSwitcher-title HvTypography-root HvTypography-highlightText"
    >
      Mock title
    </span>
    <ul
      class="HvAppSwitcher-actionsContainer HvListContainer-root"
    >
      <li
        class="HvAppSwitcherAction-root HvAppSwitcher-item HvListItem-root HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
          href="http://mockapp1/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon HvAppSwitcher-itemIcon"
          >
            <img
              alt="Mock App 1 Description"
              class="HvAppSwitcherAction-iconUrl"
              src="http://mockapp1/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title HvAppSwitcher-itemTitle HvTypography-root HvTypography-highlightText"
          >
            Mock App 1 - VALID
          </span>
          <div
            class=""
          >
            <div
              aria-label="Mock App 1 Description"
              class="HvAppSwitcherAction-iconInfo HvIconBase-root HvIconBase-s"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </a>
      </li>
      <li
        class="HvAppSwitcherAction-root HvAppSwitcher-item HvListItem-root HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
        tabindex="-1"
      >
        <button
          class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
          style="border-color: #414141;"
          tabindex="0"
        >
          <div
            class="HvAppSwitcherAction-icon HvAppSwitcher-itemIcon"
          >
            <img
              alt="Mock App 3 Description"
              class="HvAppSwitcherAction-iconUrl"
              src="http://mockapp3/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title HvAppSwitcher-itemTitle HvTypography-root HvTypography-highlightText"
          >
            Mock App 3
          </span>
          <div
            class=""
          >
            <div
              aria-label="Mock App 3 Description"
              class="HvAppSwitcherAction-iconInfo HvIconBase-root HvIconBase-s"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </button>
      </li>
      <li
        class="HvAppSwitcherAction-root HvAppSwitcher-item HvListItem-root HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
          href="http://mockapp5/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon HvAppSwitcher-itemIcon"
          >
            <img
              class="HvAppSwitcherAction-iconUrl"
              src="http://mockapp5/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title HvAppSwitcher-itemTitle HvTypography-root HvTypography-highlightText"
          >
            Mock App 5 - VALID without description
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AppSwitcher /> with minimum configuration should render correctly 1`] = `
<div>
  <div
    class="HvAppSwitcher-root HvAppSwitcher-single HvAppSwitcher-open"
  >
    <span
      class="HvAppSwitcher-title HvTypography-root HvTypography-highlightText"
    >
      Mock title
    </span>
    <ul
      class="HvAppSwitcher-actionsContainer HvListContainer-root"
    >
      <li
        class="HvAppSwitcherAction-root HvAppSwitcher-item HvListItem-root HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
          href="http://mockapp1/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon HvAppSwitcher-itemIcon"
          >
            <img
              class="HvAppSwitcherAction-iconUrl"
              src="http://mockapp1/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title HvAppSwitcher-itemTitle HvTypography-root HvTypography-highlightText"
          >
            Mock App 1
          </span>
        </a>
      </li>
      <li
        class="HvAppSwitcherAction-root HvAppSwitcher-item HvListItem-root HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
          href="http://mockapp2/"
          style="border-color: #414141;"
          tabindex="0"
          target="_blank"
        >
          <div
            class="HvAppSwitcherAction-icon HvAppSwitcher-itemIcon"
          >
            <img
              alt="Mock App 2 Description"
              class="HvAppSwitcherAction-iconUrl"
              src="http://mockapp2/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title HvAppSwitcher-itemTitle HvTypography-root HvTypography-highlightText"
          >
            Mock App 2
          </span>
          <div
            class=""
          >
            <div
              aria-label="Mock App 2 Description"
              class="HvAppSwitcherAction-iconInfo HvIconBase-root HvIconBase-s"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </a>
      </li>
      <li
        class="HvAppSwitcherAction-root HvAppSwitcher-item HvListItem-root HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
        tabindex="-1"
      >
        <a
          class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
          href="http://mockapp2/"
          style="border-color: #414141;"
          tabindex="0"
          target="_top"
        >
          <div
            class="HvAppSwitcherAction-icon HvAppSwitcher-itemIcon"
          >
            <img
              alt="Mock App 2 Description"
              class="HvAppSwitcherAction-iconUrl"
              src="http://mockapp2/icon"
            />
          </div>
          <span
            class="HvAppSwitcherAction-title HvAppSwitcher-itemTitle HvTypography-root HvTypography-highlightText"
          >
            Mock App 3
          </span>
          <div
            class=""
          >
            <div
              aria-label="Mock App 2 Description"
              class="HvAppSwitcherAction-iconInfo HvIconBase-root HvIconBase-s"
              name="Info"
              role="img"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                  fill="#414141"
                />
              </svg>
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
